# Persistencia_Homologica_Analisis_de_Datos

./: .gitignore  README.md  context.md  pyproject.toml  requirements.txt
lib/: censo.py  clasificar.py  config.py  data.py  densidad.py  eda.py  geo.py  geo_network.py  mapper_viz.py  marginacion.py  tda.py  vectorizar.py  viz_censo.py  viz_tda.py
notebooks/: 01_limpieza_eda.ipynb  01_limpieza_eda.py  02_complejos_simpliciales.ipynb  02_complejos_simpliciales.py  03_persistencia.ipynb  03_persistencia.py  04_mapper.ipynb  04_mapper.py  05_conclusiones.ipynb  05_conclusiones.py  06_huecos_geolocalizados.ipynb  06_huecos_geolocalizados.py  07_vectorizacion_estados.ipynb  07_vectorizacion_estados.py  08_clasificacion_huecos.ipynb  08_clasificacion_huecos.py  09_bifiltracion_densidad.ipynb  09_bifiltracion_densidad.py  10_cruce_censal.py  11_topologia_ponderada.py  12_isocronas.py  12b_isocrona_roma_norte.py  13_scoring_multieje.py  14_clusters_geograficos.py  14_mclp_optimizacion.py  15_mclp_red_real.py  15_validacion_topologica.py  15a_descargar_redes.py  15a_extraer_redes_pbf.py  16_dashboard_final.py  16_resultados_fase3.py  17_sensibilidad_k.py  17_validacion_topologica.py  18_sensibilidad_umbrales.py  19_mclp_subregional.py  20_indice_marginacion.py  21_robustez_topologica.py  generate_slides.py
outputs/figuras/: huecos_CDMX.html  huecos_EDOMEX.html  huecos_laguerre_CDMX.html  huecos_laguerre_EDOMEX.html  mapper_CDMX.html  mapper_EDOMEX.html
presentacion/: guion_slides_12-18.md  presentacion.typ
reporte/: paper.typ  presentacion.pptx  reporte.md  trabajo_final.md
